SFUSA/force-app/main/default/objects/Single_Barrel_Brand_Setting__mdt/fields/Brand__c.field-meta.xml
<CustomField>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Knob Creek</fullName>
                    <default>true</default>
                    <label>Knob Creek</label>
                </value>
                <value>
                    <fullName>Jim Beam</fullName>
                </value>
                <value>
                    <fullName>Cruzan</fullName>
                </value>
                <value>
                    <fullName>El Tesoro</fullName>
                </value>
                <value>
                    <fullName>Makers Mark</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>