SFUSA/force-app/main/default/objects/Single_Barrel_Brand_Setting__mdt/fields/Date_Hold__c.field-meta.xml
<CustomField>
        <fullName>Date_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If a program allows customers to hold a block of time this option will appear</description>
        <label>Date Hold</label>
        <type>Checkbox</type>
    </CustomField>