SFUSA/force-app/main/default/objects/Single_Barrel_Brand_Setting__mdt/fields/Distiller_s_Choice__c.field-meta.xml
<CustomField>
        <fullName>Distiller_s_Choice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Distiller's Choice</label>
        <type>Checkbox</type>
    </CustomField>