SFUSA/force-app/main/default/objects/Single_Barrel_Brand_Setting__mdt/fields/hasApplication__c.field-meta.xml
<CustomField>
        <fullName>hasApplication__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the brand requires and application before selecting a program type</description>
        <label>hasApplication</label>
        <type>Checkbox</type>
    </CustomField>