SFUSA/force-app/main/default/objects/Single_Barrel_Brand_Setting__mdt/fields/Order__c.field-meta.xml
<CustomField>
        <fullName>Order__c</fullName>
        <description>Order that the logos will be displayed</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>