SFUSA/force-app/main/default/objects/Single_Barrel_Brand_Setting__mdt/fields/Trip_and_Tour__c.field-meta.xml
<CustomField>
        <fullName>Trip_and_Tour__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trip and Tour</label>
        <type>Checkbox</type>
    </CustomField>